<resources>
    <string name="app_name">CheckedIn</string>
    <string name="pick">Pick</string>
    <string name="add_post">Add Post</string>
    <string name="logout">LogOut</string>
    <string name="settings">Settings</string>
    <string name="enter_email">enter_email</string>
    <string name="enter_password">enter_password</string>
    <string name="login">login</string>
    <string name="need_an_account">need_an_account</string>
    <string name="enter_your_name">enter_your_name</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="enter_your_email">enter_your_email</string>
    <string name="submit">submit</string>
    <string name="name">Name</string>
    <string name="enter_date_of_birth">Enter Date Of Birth..</string>
    <string name="enter_name">Enter Name...</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="Add_Friends">Add Friends</string>
    <string name="username">Enter your friends username..</string>
    <string name="Search">Search Friend</string>
    <string name="cancel">Cancel</string>
    <string name="places_visited">places visited</string>
    <string name="search">Search</string>
    <string name="address">Address</string>
    <string name="place_name">Place Name</string>
    <string name="username1">Username</string>
    <string name="display_profile_pic">Display Profile Pic</string>
    <string name="wanna_write_something">Wanna Write Something??</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="post">Post</string>
    <string name="checkin">checkIn</string>
    <string name="SharePlace">Share Place..</string>
    <string name="address2">Address..</string>
    <string name="place_name2">Place Name..</string>
    <string name="checkedin_at">checkedIn at</string>
    <string name="choose_pic">choose a pic</string>
</resources>
