<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
<item android:id="@+id/action_add"
    android:icon="@mipmap/ic_add_location_white_24dp"
    android:title="@string/add_post"
    app:showAsAction="always"
    tools:ignore="AlwaysShowAction" />
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item android:id="@+id/signMeOut"
        android:title="@string/logout"
        app:showAsAction="collapseActionView"/>
    <item android:id="@+id/AddFriends"
        android:title="@string/Add_Friends"
        app:showAsAction="collapseActionView"/>
</menu>