<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rishabh.checkedin.Post">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/technicl"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/displayName"
            android:background="@drawable/rounded"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:id="@+id/displayPic"
                android:layout_alignParentLeft="true"
                tools:ignore="RtlHardcoded"
                android:padding="2dp"
                android:contentDescription="@string/display_profile_pic"
                android:layout_alignBottom="@+id/usr1" />
            <TextView
                android:id="@+id/usr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/displayPic"
                android:layout_toRightOf="@+id/displayPic"
                android:hint="@string/username1"
                android:padding="20dp"
                android:textColor="#090a0a"
                android:textAllCaps="true"
                android:typeface="sans"
                tools:targetApi="lollipop" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/pick_a_photo"
                android:src="@mipmap/ic_mood_black_24dp"
                android:contentDescription="@string/choose_pic" />

        </RelativeLayout>
        <EditText
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded"
            android:hint="@string/wanna_write_something"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/technicl"
        android:layout_marginTop="30dp"
        android:id="@+id/checkPlace"
        android:background="@drawable/rect"
        android:drawableLeft="@mipmap/ic_place_black_24dp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/checkin"

        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/placeName"
        android:hint="@string/place_name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkPlace"
        android:padding="10dp"
        android:background="@drawable/rounded"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/address"
        android:hint="@string/address2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:layout_below="@+id/placeName"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/rect"
        android:layout_alignParentStart="true"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/Post" />


</RelativeLayout>
