<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/cardview_dark_background"
    tools:context="com.example.rishabh.checkedin.login">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:background="@drawable/rounded"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="20dp"
        android:id="@+id/email"
        android:hint="@string/enter_email"
        tools:ignore="InvalidId" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/rounded"
        android:padding="20dp"
        android:layout_marginTop="44dp"
        android:hint="@string/enter_password"
        tools:ignore="InvalidId" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/SignIn"
        android:layout_below="@+id/password"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@android:color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="InvalidId" />

    <Button
        android:text="@string/need_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:id="@+id/Register" />
</RelativeLayout>
