<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UseCompoundDrawables">

    <android.support.v7.widget.CardView

        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rect">
        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="60dp"
            android:contentDescription="@string/display_profile_pic"
            android:layout_height="40dp"
            android:background="@drawable/circle"
            android:padding="2dp"

            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/username1"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:textColor="#161616"
                        android:layout_height="wrap_content"
                        android:id="@+id/activeUser" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/checkedin_at"
                        android:textColor="#333131"
                        android:textAlignment="center"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/addresses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#161616"
                    android:text="@string/place_name"
                   />


            </LinearLayout>


        </LinearLayout>
                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rect"
                    android:textSize="24sp"
                    android:textStyle="normal|bold"
                    android:maxLines="2"
                    android:maxLength="5" />

                <TextView
                    android:id="@+id/ListText"
                    android:layout_width="match_parent"
                    android:drawableLeft="@mipmap/ic_location_city_black_24dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/address"
                    android:textColor="#161616"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rect"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>