<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/cardview_dark_background"
    tools:context="com.example.rishabh.checkedin.Register">


    <Button
        android:text="@string/submit"
        android:layout_height="wrap_content"
        android:id="@+id/Submit"
        android:layout_below="@+id/nPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:padding="20dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailadrr"
        android:layout_marginTop="76dp"
        android:hint="@string/enter_your_email"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/nPassword"
        android:layout_marginTop="87dp"
        android:hint="@string/enter_your_password"
        android:layout_below="@+id/emailadrr"
        android:background="@drawable/rounded"
        android:padding="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
