<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rishabh.checkedin.Setup">


    <EditText
        android:layout_below="@+id/proPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded"
        android:padding="20dp"
        android:id="@+id/Name"
        android:hint="@string/enter_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="datetime"
        android:ems="10"
        android:layout_below="@+id/Name"
        android:layout_marginTop="54dp"
        android:id="@+id/DOB"
        android:background="@drawable/rounded"
        android:padding="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_date_of_birth" />
    <Button
        android:text="Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/Submit"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_mood_black_24dp"
        android:id="@+id/proPic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:background="@color/cardview_light_background"
        android:contentDescription="@string/profile_pic" />
</RelativeLayout>
